tests/ui/consts/issue-44415.stderr
error[E0391]: cycle detected when evaluating type-level constant
  --> $DIR/issue-44415.rs:6:17
   |
LL |     bytes: [u8; unsafe { intrinsics::size_of::<Foo>() }],
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: ...which requires const-evaluating + checking `Foo::bytes::{constant#0}`...
   = note: ...which requires const-evaluating + checking `Foo::bytes::{constant#0}`...
note: ...which requires computing layout of `Foo`...
  --> $DIR/issue-44415.rs:5:1
   |
LL | struct Foo {
   | ^^^^^^^^^^
   = note: ...which requires computing layout of `[u8; unsafe { intrinsics::size_of::<Foo>() }]`...
note: ...which requires normalizing `[u8; unsafe { intrinsics::size_of::<Foo>() }]`...
  --> $DIR/issue-44415.rs:6:17
   |
LL |     bytes: [u8; unsafe { intrinsics::size_of::<Foo>() }],
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: ...which again requires evaluating type-level constant, completing the cycle
   = note: cycle used when checking that `Foo` is well-formed
   = note: for more information, see <https://rustc-dev-guide.rust-lang.org/overview.html#queries> and <https://rustc-dev-guide.rust-lang.org/query.html>

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0391`.
